--- a/exampleAnalysisTemplate.cfg
+++ b/exampleAnalysisTemplate.cfg
@@ -3,7 +3,7 @@ process checkRCT  = {
 # Read the digitised events from a root file
 
   source = PoolSource {
-    untracked vstring fileNames = {"$inputFileName"}
+    untracked vstring fileNames = {$inputFileNames}
     untracked int32  maxEvents = -1
   }
 
